--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "13-blog-appwrite",
   "homepage": ".",
-  "private": true,
+  "private": false,
   "version": "0.0.0",
   "type": "module",
   "scripts": {
